--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -6,7 +6,7 @@
       "name": "Submarine_cable_route.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMgWayU0dAEJ1VRMb+MXVJu",
+      "authorship_tag": "ABX9TyPdbBIzLSbA9v/cmC4WZFE6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,14 +31,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "s7n52UFxpPcz"
+        "id": "s7n52UFxpPcz",
+        "outputId": "4d7ba58c-ce62-459e-bb8b-33dd1c4b0861",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!git clone https://github.com/vh-praneeth/Submarine_cable_route 2> /dev/null\n",
         "%cd Submarine_cable_route"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/Submarine_cable_route\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -52,21 +64,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DigwvbiVpTty"
+        "id": "dUy7LulGpT1t",
+        "outputId": "dab47814-09d9-4200-9fc9-5d80c645c313",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "!java Main.java"
+        "!java Test.java"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter source: India_Mumbai\n",
+            "Enter destination: USA\n",
+            "Route: \n",
+            " India_Mumbai -> India_Chennai -> Singapore -> USA\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dUy7LulGpT1t"
+        "id": "DigwvbiVpTty"
       },
       "source": [
-        ""
+        "!java Main.java"
       ],
       "execution_count": null,
       "outputs": []
